--- a/firstportfolio.html
+++ b/firstportfolio.html
@@ -31,9 +31,14 @@
 </div>
 
 <div id="work">
+    
     <h2>Work History</h2>
        <img class="oly"src="Olympia-Washington.jpg">
-    <p></p>
+       <p class="first">
+        Washington State Senate<br>
+        Washington State House of Representatives
+       </p>
+    </div>
     </div>
     </div>
     </div>
@@ -41,16 +46,18 @@
 
 
 <div id="education">
+   
     <h3>Education</h3>
+
+    <div class="ed">
         <img class="uni"src="MU.jpg">
-        <div class="ed">
-            <p>B.S. Human Development and Family Studies <br>                                    
+            <p class="second">B.S. Human Development and Family Studies <br>                                    
                 University of Missouri, Columbia 
                 <br>
                 Evans School of Public Affairs  
                 Master’s in Public Administration
-                University of Washington, Seattle                                                    
-                </p>
+                University of Washington, Seattle                    </p>
+            </div>
         </div>
         </div>
     </div>
